# xarray-upstream-checker

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml  xarray_upstream_checker.py
src/xarray_upstream_checker/: __init__.py  __main__.py  checker.py  display.py  exceptions.py  github_api.py  main.py
