[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xarray-upstream-checker"
version = "0.1.0"
description = "Monitor xarray's upstream dependency CI tests for zarr compatibility"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Ian Hunt-Isaak"},
]
keywords = ["xarray", "zarr", "ci", "monitoring", "upstream"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "rich>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff",
]

[project.urls]
"Homepage" = "https://github.com/ianhi/xarray-upstream-checker"
"Bug Reports" = "https://github.com/ianhi/xarray-upstream-checker/issues"
"Source" = "https://github.com/ianhi/xarray-upstream-checker"

[project.scripts]
xarray-upstream-checker = "xarray_upstream_checker:main"

[tool.setuptools.packages.find]
where = ["src"]

# Ruff configuration
[tool.ruff]
src = ["src"]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "ICN",  # flake8-import-conventions
    "RUF",  # Ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "ARG001", # unused function argument
    "ARG002", # unused method argument
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.uv.workspace]
members = [
    "tmp",
]
